# Hands-on-pygame

./: main.py  pyproject.toml
src/: constants.py  game.py  obstacle.py  player.py  runner.py
